# tardisemulator

./: .gitignore  README.md  main.py  predict.py  pyproject.toml  train.py
examples/: basic_usage.py
src/: __init__.py
src/configs/: default_config.yaml
src/configs/experiment_configs/: small_test.yaml  tardis_regression.yaml
src/data/: __init__.py  dataloader.py  preprocessing.py
src/inference/: __init__.py  predictor.py
src/models/: __init__.py  base_model.py  mlp.py
src/training/: __init__.py  callbacks.py  metrics.py  optimizers.py  trainer.py
src/utils/: __init__.py  checkpoints.py  config.py  directory.py  logging.py
